# aivika-distributed-test

./: .gitignore  LICENSE  README.md  aivika-distributed-test.cabal  aivikasim-distributed-test.cabal  cluster.conf  stack.yaml
app/: Main.hs
src/: SimpleLocalnetHelper.hs
