name:                aivikasim-distributed-test
version:             0.1.0.0
synopsis:            A test distributed simulation model for AivikaSim
description:
    This test project defines a distributed discrete event simulation model for AivikaSim [1]. 
    It should return the same reproducible results on computers with the same architecture
    whatever cluster you create.
    .
    \[1] <http://www.aivikasoft.com/aivikasim/aivikasim-distributed>
    .
homepage:            https://github.com/dsorokin/aivikasim-distributed-test#readme
license:             AllRightsReserved
license-file:        LICENSE
author:              David Sorokin
maintainer:          david.sorokin@gmail.com
copyright:           (c) 2017. David Sorokin <david.sorokin@gmail.com>
category:            Simulation
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

data-files:          cluster.conf

library
  hs-source-dirs:      src
  exposed-modules:     SimpleLocalnetHelper
  build-depends:       base >= 4.7 && < 5
                     , distributed-process
                     , distributed-process-simplelocalnet
                     , bytestring
                     , network-transport
  default-language:    Haskell2010

executable aivikasim-distributed-test
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aivikasim >= 0.1
                     , aivikasim-transformers >= 0.1
                     , aivikasim-distributed >= 0.1
                     , aivikasim-distributed-test
                     , distributed-process
                     , distributed-process-simplelocalnet
                     , binary
                     , random
                     , mtl
  default-language:    Haskell2010
  other-extensions:    TemplateHaskell,
                       DeriveGeneric,
                       DeriveDataTypeable

test-suite aivikasim-distributed-test-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , aivikasim-distributed-test
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dsorokin/aivikasim-distributed-test
